[project]
name = "hugait-tda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cmake>=4.0.3",
    "datetime>=5.5",
    "giotto-tda>=0.6.2",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbformat>=5.10.4",
    "numpy>=1.26.4",
    "pandas>=2.3.1",
]
